@@ -1,3 +1,10 @@
+2005-10-31  Moritz Schulte  <moritz@g10code.com>
+
+	* poldi-ctrl.c (cmd_test): Adjusted to new wait_for_card() API.
+	(conversation): New function.
+	Use authenticate() instead of duplicating the authentication
+	mechanism.
+
 2005-10-29  Moritz Schulte  <moritz@g10code.com>
 
 	* poldi-ctrl.c (cmd_remove_user): Print a warning instead of an
